--- a/index.html
+++ b/index.html
@@ -8,6 +8,35 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="header__container">
+            <div class="logo">
+                <img src="img/logo.png" alt="icon logo" class="logo__image">
+                <div class="logo__text">
+                    <span class="logo__name">Doctor</span>
+                    <span class="logo__description">Meet our most specialist doctors</span>
+                </div>
+            </div>
+            <nav class="header__menu">
+                <ul class="header__list">
+                    <li class="header__item">
+                        <a href="#" class="header__link">Home</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__link">About us</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__link">Our services</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__link">Our team</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__link">Contact us</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
