feat: add block about

--- a/index.html
+++ b/index.html
@@ -38,5 +38,52 @@
             </nav>
         </div>
     </header>
+    <main>
+        <section class="about">
+            <h2 class="about__title">About us</h2>
+            <p class="about__subtitle">
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                when an unknown printer took a galley of type and scrambled
+            </p>
+            <div class="about__cards">
+                <div class="about__card card">
+                    <img src="img/image_card1.png" alt="image card" class="card__image">
+                    <div class="card__description">
+                        <h3 class="card__title">Children’s specialist</h3>
+                        <p class="card__text">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                            when an unknown printer.
+                        </p>
+                        <div class="card__hexagon"></div>
+                    </div>
+                </div>
+                <div class="about__card card">
+                    <img src="img/image_card2.png" alt="image card" class="card__image">
+                    <div class="card__description">
+                        <h3 class="card__title">Women’s specialist</h3>
+                        <p class="card__text">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                            when an unknown printer.
+                        </p>
+                        <div class="card__hexagon"></div>
+                    </div>
+                </div>
+                <div class="about__card card">
+                    <img src="img/image_card3.png" alt="image card" class="card__image">
+                    <div class="card__description">
+                        <h3 class="card__title">men’s specialist</h3>
+                        <p class="card__text">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                            when an unknown printer.
+                        </p>
+                        <div class="card__hexagon"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
