feat: add block services

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     </header>
     <main>
         <section class="about">
-            <h2 class="about__title">About us</h2>
-            <p class="about__subtitle">
+            <h2 class="about__title title">About us</h2>
+            <p class="about__subtitle subtitle">
                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
                 when an unknown printer took a galley of type and scrambled
             </p>
@@ -80,6 +80,60 @@
                             when an unknown printer.
                         </p>
                         <div class="card__hexagon"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="services">
+            <div class="services__container">
+                <h2 class="services__title title">our services</h2>
+                <p class="services__subtitle subtitle">
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
+                </p>
+                <div class="services__items">
+                    <div class="services__item">
+                        <div class="services__image">
+                            <svg class="services__hexagon">
+                                <use xlink:href="img/sprite.svg#hexagon"></use>
+                            </svg>
+                            <svg class="services__icon icon-heart">
+                                <use xlink:href="img/sprite.svg#heart"></use>
+                            </svg>
+                        </div>
+                        <span class="services__text">Heart problem</span>
+                    </div>
+                    <div class="services__item">
+                        <div class="services__image">
+                            <svg class="services__hexagon">
+                                <use xlink:href="img/sprite.svg#hexagon"></use>
+                            </svg>
+                            <svg class="services__icon icon-brain">
+                                <use xlink:href="img/sprite.svg#brain"></use>
+                            </svg>
+                        </div>
+                        <span class="services__text">Brain problem</span>
+                    </div>
+                    <div class="services__item">
+                        <div class="services__image">
+                            <svg class="services__hexagon">
+                                <use xlink:href="img/sprite.svg#hexagon"></use>
+                            </svg>
+                            <svg class="services__icon icon-hnee">
+                                <use xlink:href="img/sprite.svg#knee"></use>
+                            </svg>
+                        </div>
+                        <span class="services__text">Knee problem</span>
+                    </div>
+                    <div class="services__item">
+                        <div class="services__image">
+                            <svg class="services__hexagon">
+                                <use xlink:href="img/sprite.svg#hexagon"></use>
+                            </svg>
+                            <svg class="services__icon icon-human-bones">
+                                <use xlink:href="img/sprite.svg#human-bones"></use>
+                            </svg>
+                        </div>
+                        <span class="services__text">Human Bones problem</span>
                     </div>
                 </div>
             </div>
