--- a/index.html
+++ b/index.html
@@ -138,6 +138,75 @@
                 </div>
             </div>
         </section>
+        <section class="team">
+            <h2 class="team__title title">our team</h2>
+            <p class="team__subtitle subtitle">
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                when an unknown printer took a galley of type and scrambled
+            </p>
+            <div class="team__info">
+                <div class="team__doctor">
+                    <img src="img/Keith.png" alt="image dr. Keith" class="team__image">
+                    <img src="img/image-design.png" alt="image design triangle" class="team__triangle">
+                    <div class="team__description">
+                        <h3 class="team__name">Dr. Keith M. Weiner, M.D.</h3>
+                        <p class="team__text">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                            when an unknown printer took a galley of type and scrambled it to make a type
+                        </p>
+                    </div>
+                </div>
+                <div class="team__doctor">
+                    <img src="img/Danielle.png" alt="image dr. Danielle" class="team__image">
+                    <img src="img/image-design.png" alt="image design triangle" class="team__triangle team__triangle_rotate">
+                    <div class="team__description">
+                        <h3 class="team__name">Dr. Danielle, M.D.</h3>
+                        <p class="team__text">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                            when an unknown printer took a galley of type and scrambled it to make a book.
+                        </p>
+                    </div>
+                </div>
+                <div class="team__doctor">
+                    <img src="img/Joseph.png" alt="image dr. Joseph" class="team__image">
+                    <img src="img/image-design-black.png" alt="image design triangle" class="team__triangle">
+                    <div class="team__description team__description_active">
+                        <h3 class="team__name">Dr. Joseph, M.D.</h3>
+                        <p class="team__text">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                            when an unknown printer took a galley of type and scrambled it to make a type
+                        </p>
+                    </div>
+                </div>
+                <div class="team__doctor">
+                    <img src="img/Caitlin.png" alt="image dr. Caitlin" class="team__image">
+                    <img src="img/image-design.png" alt="image design triangle" class="team__triangle team__triangle_rotate">
+                    <div class="team__description">
+                        <h3 class="team__name">Dr. Caitlin, M.D.</h3>
+                        <p class="team__text">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                            when an unknown printer took a galley of type and scrambled it to make a type
+                        </p>
+                    </div>
+                </div>
+                <div class="team__doctor">
+                    <img src="img/Michael.png" alt="image dr. Michael" class="team__image">
+                    <img src="img/image-design.png" alt="image design triangle" class="team__triangle">
+                    <div class="team__description">
+                        <h3 class="team__name">Dr. Michael, M.D.</h3>
+                        <p class="team__text">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                            when an unknown printer took a galley of type and scrambled it to make a type
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
