feat: add block contact

--- a/index.html
+++ b/index.html
@@ -207,6 +207,50 @@
                 </div>
             </div>
         </section>
+        <section class="contact">
+            <div class="contact__container">
+                <h2 class="contact__title title">contact us</h2>
+                <div class="contact__content">
+                    <div class="contact__info">
+                        <h3 class="contact__info-title">contact information</h3>
+                        <img src="img/line.png" alt="image line">
+                        <div class="contact__list">
+                            <div class="contact__item contact__date">
+                                <span class="contact__text">Monday - Friday:</span>
+                                <span class="contact__description">9:30 AM to 6:30 PM</span>
+                            </div>
+                            <div class="contact__item contact__address">
+                                <span class="contact__text">Address:</span>
+                                <a href="https://www.google.com/maps/search/123+Some+Street+,+London,+UK,+CP+123/@51.528308,-0.3817765,10z/data=!3m1!4b1" class="contact__link">123 Some Street , London, UK, CP 123</a>
+                            </div>
+                            <div class="contact__item contact__phone">
+                                <span class="contact__text">Phone:</span>
+                                <a href="tel:+0329871235" class="contact__link">(032) 987-1235</a>
+                            </div>
+                            <div class="contact__item contact__fax">
+                                <span class="contact__text">Fax:</span>
+                                <span class="contact__description">(123) 984-1234</span>
+                            </div>
+                            <div class="contact__item contact__email">
+                                <span class="contact__text">Email:</span>
+                                <a href="mailto:info@doctor.com" class="contact__link">info@doctor.com</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="contact__message">
+                        <h3 class="contact__info-title">leave us a message</h3>
+                        <img src="img/line.png" alt="image line">
+                        <form class="contact__form">
+                            <input class="contact__input" type="text" name="username" placeholder="Name:">
+                            <input class="contact__input" type="email" name="email" placeholder="Email:">
+                            <input class="contact__input" type="tel" name="phone" placeholder="Phone No:">
+                            <textarea class="contact__textarea" name="textarea" placeholder="Message:"></textarea>
+                            <button class="contact__button" type="submit">submit</button> 
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
