feat: add block footer

--- a/index.html
+++ b/index.html
@@ -252,5 +252,21 @@
             </div>
         </section>
     </main>
+    <footer class="footer">
+        <div class="footer__container">
+            <span class="footer__text">© 2014 Doctor All rights reserved.</span>
+            <div class="footer__icons">
+                <svg class="footer__icon footer__facebook">
+                    <use xlink:href="img/sprite.svg#facebook"></use>
+                </svg>
+                <svg class="footer__icon footer__twitter">
+                    <use xlink:href="img/sprite.svg#twitter"></use>
+                </svg>
+                <svg class="footer__icon footer__skype">
+                    <use xlink:href="img/sprite.svg#skype"></use>
+                </svg>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
