--- a/index.html
+++ b/index.html
@@ -39,6 +39,19 @@
         </div>
     </header>
     <main>
+        <section class="slider">
+            <div class="slider__container">
+                <div class="slider__item">
+                    <img src="img/background-main.jpg" alt="image doctors">
+                </div>
+                <div class="slider__item">
+                    <img src="img/background-main2.jpg" alt="image doctors">
+                </div>
+                <div class="slider__item">
+                    <img src="img/background-main3.jpg" alt="image doctors">
+                </div>
+            </div>
+        </section>
         <section class="about">
             <h2 class="about__title title">About us</h2>
             <p class="about__subtitle subtitle">
@@ -268,5 +281,9 @@
             </div>
         </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/script-jquery.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
