feat: add burger and adaptive block header

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
                     <span class="logo__description">Meet our most specialist doctors</span>
                 </div>
             </div>
+            <div class="burger">
+                <svg class="burger__icon">
+                    <use xlink:href="../img/sprite.svg#burger"></use>
+                </svg>
+            </div>
             <nav class="header__menu">
                 <ul class="header__list">
                     <li class="header__item">
