feat: add adaptive block slider

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
             </div>
         </section>
-        <section class="about">
+        <!-- <section class="about">
             <h2 class="about__title title">About us</h2>
             <p class="about__subtitle subtitle">
                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
@@ -268,9 +268,9 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="footer__container">
             <span class="footer__text">© 2014 Doctor All rights reserved.</span>
             <div class="footer__icons">
@@ -285,7 +285,7 @@
                 </svg>
             </div>
         </div>
-    </footer>
+    </footer> -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/script-jquery.js"></script>
