--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
     </header>
     <main>
-        <section class="slider">
+        <!-- <section class="slider">
             <div class="slider__container">
                 <div class="slider__item">
                     <img src="img/background-main.jpg" alt="image doctors">
@@ -56,8 +56,8 @@
                     <img src="img/background-main3.jpg" alt="image doctors">
                 </div>
             </div>
-        </section>
-        <!-- <section class="about">
+        </section> -->
+        <section class="about">
             <h2 class="about__title title">About us</h2>
             <p class="about__subtitle subtitle">
                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
@@ -102,7 +102,7 @@
                 </div>
             </div>
         </section>
-        <section class="services">
+        <!-- <section class="services">
             <div class="services__container">
                 <h2 class="services__title title">our services</h2>
                 <p class="services__subtitle subtitle">
