feat: add adaptive block services

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 </div>
             </div>
         </section>
-        <!-- <section class="services">
+        <section class="services">
             <div class="services__container">
                 <h2 class="services__title title">our services</h2>
                 <p class="services__subtitle subtitle">
@@ -156,7 +156,7 @@
                 </div>
             </div>
         </section>
-        <section class="team">
+        <!-- <section class="team">
             <h2 class="team__title title">our team</h2>
             <p class="team__subtitle subtitle">
                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
