feat: add adaptive block team

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 </div>
             </div>
         </section>
-        <!-- <section class="team">
+        <section class="team">
             <h2 class="team__title title">our team</h2>
             <p class="team__subtitle subtitle">
                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
@@ -225,7 +225,7 @@
                 </div>
             </div>
         </section>
-        <section class="contact">
+        <!-- <section class="contact">
             <div class="contact__container">
                 <h2 class="contact__title title">contact us</h2>
                 <div class="contact__content">
