--- a/index.html
+++ b/index.html
@@ -225,13 +225,13 @@
                 </div>
             </div>
         </section>
-        <!-- <section class="contact">
+        <section class="contact">
             <div class="contact__container">
                 <h2 class="contact__title title">contact us</h2>
                 <div class="contact__content">
                     <div class="contact__info">
                         <h3 class="contact__info-title">contact information</h3>
-                        <img src="img/line.png" alt="image line">
+                        <img class="contact__line" src="img/line.png" alt="image line">
                         <div class="contact__list">
                             <div class="contact__item contact__date">
                                 <span class="contact__text">Monday - Friday:</span>
@@ -257,7 +257,7 @@
                     </div>
                     <div class="contact__message">
                         <h3 class="contact__info-title">leave us a message</h3>
-                        <img src="img/line.png" alt="image line">
+                        <img class="contact__line" src="img/line.png" alt="image line">
                         <form class="contact__form">
                             <input class="contact__input" type="text" name="username" placeholder="Name:">
                             <input class="contact__input" type="email" name="email" placeholder="Email:">
@@ -268,7 +268,7 @@
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
     </main>
     <!-- <footer class="footer">
         <div class="footer__container">
