--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
             </div>
         </section>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
         <div class="footer__container">
             <span class="footer__text">© 2014 Doctor All rights reserved.</span>
             <div class="footer__icons">
@@ -285,7 +285,7 @@
                 </svg>
             </div>
         </div>
-    </footer> -->
+    </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/script-jquery.js"></script>
