fix: change adaptive block slider

--- a/index.html
+++ b/index.html
@@ -44,19 +44,34 @@
         </div>
     </header>
     <main>
-        <!-- <section class="slider">
+        <section class="slider">
             <div class="slider__container">
                 <div class="slider__item">
-                    <img src="img/background-main.jpg" alt="image doctors">
+                    <!-- <img src="img/background-main.jpg" alt="image doctors"> -->
+                    <div class='slider__info'>
+                        <h2 class='slider__title'>providing</h2>
+                        <p class='slider__subtitle'>highquality service for men & women</p>
+                        <button class='slider__button'>learn more</button>
+                    </div>
                 </div>
                 <div class="slider__item">
-                    <img src="img/background-main2.jpg" alt="image doctors">
+                    <!-- <img src="img/background-main2.jpg" alt="image doctors"> -->
+                    <div class='slider__info'>
+                        <h2 class='slider__title'>providing</h2>
+                        <p class='slider__subtitle'>highquality service for men & women</p>
+                        <button class='slider__button'>learn more</button>
+                    </div>
                 </div>
                 <div class="slider__item">
-                    <img src="img/background-main3.jpg" alt="image doctors">
+                    <!-- <img src="img/background-main3.jpg" alt="image doctors"> -->
+                    <div class='slider__info'>
+                        <h2 class='slider__title'>providing</h2>
+                        <p class='slider__subtitle'>highquality service for men & women</p>
+                        <button class='slider__button'>learn more</button>
+                    </div>
                 </div>
             </div>
-        </section> -->
+        </section>
         <section class="about">
             <h2 class="about__title title">About us</h2>
             <p class="about__subtitle subtitle">
