feat: add burger

--- a/index.html
+++ b/index.html
@@ -301,6 +301,33 @@
             </div>
         </div>
     </footer>
+    <div class="shadowed"></div>
+    <div class="burger__rotate">
+        <svg class="burger__icon">
+            <use xlink:href="../img/sprite.svg#burger"></use>
+        </svg>
+    </div>
+    <aside class="burger__sidebar">
+        <nav class="burger__menu">
+            <ul class="burger__list">
+                <li class="burger__item">
+                    <a href="#" class="burger__link">Home</a>
+                </li>
+                <li class="burger__item">
+                    <a href="#" class="burger__link">About us</a>
+                </li>
+                <li class="burger__item">
+                    <a href="#" class="burger__link">Our services</a>
+                </li>
+                <li class="burger__item">
+                    <a href="#" class="burger__link">Our team</a>
+                </li>
+                <li class="burger__item">
+                    <a href="#" class="burger__link">Contact us</a>
+                </li>
+            </ul>
+        </nav>
+    </aside>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/script-jquery.js"></script>
