--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                             Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
                             when an unknown printer.
                         </p>
+                        <p class="card__letter"></p>
                         <div class="card__hexagon"></div>
                     </div>
                 </div>
@@ -100,6 +101,7 @@
                             Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
                             when an unknown printer.
                         </p>
+                        <p class="card__letter"></p>
                         <div class="card__hexagon"></div>
                     </div>
                 </div>
@@ -112,6 +114,7 @@
                             Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
                             when an unknown printer.
                         </p>
+                        <p class="card__letter"></p>
                         <div class="card__hexagon"></div>
                     </div>
                 </div>
