feat: add scroll

--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
                         <a href="#" class="header__link">Home</a>
                     </li>
                     <li class="header__item">
-                        <a href="#" class="header__link">About us</a>
+                        <a href="#about" class="header__link">About us</a>
                     </li>
                     <li class="header__item">
-                        <a href="#" class="header__link">Our services</a>
+                        <a href="#services" class="header__link">Our services</a>
                     </li>
                     <li class="header__item">
-                        <a href="#" class="header__link">Our team</a>
+                        <a href="#team" class="header__link">Our team</a>
                     </li>
                     <li class="header__item">
-                        <a href="#" class="header__link">Contact us</a>
+                        <a href="#contact" class="header__link">Contact us</a>
                     </li>
                 </ul>
             </nav>
@@ -47,7 +47,6 @@
         <section class="slider">
             <div class="slider__container">
                 <div class="slider__item">
-                    <!-- <img src="img/background-main.jpg" alt="image doctors"> -->
                     <div class='slider__info'>
                         <h2 class='slider__title'>providing</h2>
                         <p class='slider__subtitle'>highquality service for men & women</p>
@@ -55,7 +54,6 @@
                     </div>
                 </div>
                 <div class="slider__item">
-                    <!-- <img src="img/background-main2.jpg" alt="image doctors"> -->
                     <div class='slider__info'>
                         <h2 class='slider__title'>providing</h2>
                         <p class='slider__subtitle'>highquality service for men & women</p>
@@ -63,7 +61,6 @@
                     </div>
                 </div>
                 <div class="slider__item">
-                    <!-- <img src="img/background-main3.jpg" alt="image doctors"> -->
                     <div class='slider__info'>
                         <h2 class='slider__title'>providing</h2>
                         <p class='slider__subtitle'>highquality service for men & women</p>
@@ -72,7 +69,7 @@
                 </div>
             </div>
         </section>
-        <section class="about">
+        <section id='about' class="about">
             <h2 class="about__title title">About us</h2>
             <p class="about__subtitle subtitle">
                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
@@ -120,7 +117,7 @@
                 </div>
             </div>
         </section>
-        <section class="services">
+        <section id="services" class="services">
             <div class="services__container">
                 <h2 class="services__title title">our services</h2>
                 <p class="services__subtitle subtitle">
@@ -174,7 +171,7 @@
                 </div>
             </div>
         </section>
-        <section class="team">
+        <section id="team" class="team">
             <h2 class="team__title title">our team</h2>
             <p class="team__subtitle subtitle">
                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
@@ -243,7 +240,7 @@
                 </div>
             </div>
         </section>
-        <section class="contact">
+        <section id="contact" class="contact">
             <div class="contact__container">
                 <h2 class="contact__title title">contact us</h2>
                 <div class="contact__content">
@@ -317,16 +314,16 @@
                     <a href="#" class="burger__link">Home</a>
                 </li>
                 <li class="burger__item">
-                    <a href="#" class="burger__link">About us</a>
+                    <a href="#about" class="burger__link">About us</a>
                 </li>
                 <li class="burger__item">
-                    <a href="#" class="burger__link">Our services</a>
+                    <a href="#services" class="burger__link">Our services</a>
                 </li>
                 <li class="burger__item">
-                    <a href="#" class="burger__link">Our team</a>
+                    <a href="#team" class="burger__link">Our team</a>
                 </li>
                 <li class="burger__item">
-                    <a href="#" class="burger__link">Contact us</a>
+                    <a href="#contact" class="burger__link">Contact us</a>
                 </li>
             </ul>
         </nav>
